Add full Liquibase schema with indexes and constraints